--- a/app/views/sidebars/_application.html.erb
+++ b/app/views/sidebars/_application.html.erb
@@ -1,6 +1,7 @@
 <ul class="nav nav-list">
   <li class="nav-header">Application</li>
-  <li <%= active("Create Cash Sale") %>><%= link_to icon_("credit-card") + t("activerecord.models.invoice_header.new_aio"), new_aio_invoice_headers_path %></li>
+  <li <%= active("Create Cash Sale") %>><%= link_to icon_("credit-card") + t("activerecord.models.invoice_header.new_aio"), create_aio_process_instances_path(:token => "13"), :method => :post %></li>
+  <li <%= active("My first Process") %>><%= link_to icon_("heart") + t("activerecord.models.invoice_header.my_first_process"), create_aio_process_instances_path(:token => "1"), :method => :post %></li>
   <li <%= active("invoice_header") %>><%= link_to icon_("credit-card") + t("activerecord.models.invoice_header.other"), invoice_headers_path %></li>
   <li <%= active("invoice_position") %>><%= link_to icons(["credit-card", "list-ol"]) + t("activerecord.models.invoice_position.other"), invoice_positions_path %></li>
 </ul>
