--- a/app/views/invoice_headers/index.html.erb
+++ b/app/views/invoice_headers/index.html.erb
@@ -33,6 +33,6 @@
 </table>
 
 
-<%= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
+<%#= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
             new_invoice_header_path,
             :class => 'btn btn-primary' %>
